--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=3.3.1 <4.0.0"
 
 dependencies:
+  awesome_notifications: ^0.9.3+1
   carousel_slider: ^4.2.1
   cloud_firestore: ^4.15.9
   cool_alert: ^2.0.1
@@ -28,6 +29,7 @@ dependencies:
   dio: ^5.4.1
   firebase_auth: ^4.17.9
   firebase_core: ^2.27.1
+  firebase_messaging: ^14.7.20
   flutter:
     sdk: flutter
   flutter_spinkit: ^5.2.0
@@ -35,6 +37,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   google_fonts: ^6.2.1
   google_nav_bar: ^5.0.6
+  http: ^1.2.1
   icons_plus: ^5.0.0
   intl: ^0.19.0
   introduction_screen: ^3.1.14
